[gd_scene load_steps=13 format=2]

[ext_resource path="res://tex/cells.png" type="Texture" id=1]
[ext_resource path="res://obj/Player.res" type="PackedScene" id=2]
[ext_resource path="res://tex/trigger.jpg" type="Texture" id=3]
[ext_resource path="res://scr/Trigger1.gd" type="Script" id=4]
[ext_resource path="res://spr/eye1.png" type="Texture" id=5]

[sub_resource type="SpatialMaterial" id=1]
flags_world_triplanar = true
albedo_texture = ExtResource( 1 )

[sub_resource type="SpatialMaterial" id=7]
flags_transparent = true
albedo_texture = ExtResource( 5 )

[sub_resource type="QuadMesh" id=5]
material = SubResource( 7 )

[sub_resource type="GDScript" id=6]
script/source = "extends MeshInstance


var run = false
var height = 0

func _ready():
	height = scale.y
	init()

func init():
	visible = false

func _process(_delta):
	if run:
		#print(name+\".run == true\")
		run = not run
		anim()

func anim():
	#print(name+\".anim()\")
	yield(get_tree().create_timer(0.00625), \"timeout\")
	scale.y = 0.2*height
	visible = true
	#print(name+\".scale.y = \"+str(scale.y))
	for i in range(4):
		yield(get_tree().create_timer(0.00625), \"timeout\")
		scale.y = (0.4+0.2*i)*height
		#print(name+\".scale.y = \"+str(scale.y))

func start():
	#print(name+\".start()\")
	run = true
"

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
flags_unshaded = true
flags_world_triplanar = true
params_blend_mode = 1
albedo_texture = ExtResource( 3 )

[sub_resource type="CubeMesh" id=3]
material = SubResource( 2 )
size = Vector3( 0.5, 0.5, 0.5 )

[sub_resource type="BoxShape" id=4]

[node name="TestRoom" type="Spatial"]

[node name="Player" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4.1349, 0 )

[node name="CSGCombiner" type="CSGCombiner" parent="."]
use_collision = true

[node name="CSGBox" type="CSGBox" parent="CSGCombiner"]
use_collision = true
invert_faces = true
width = 10.1668
height = 8.6744
depth = 12.0219
material = SubResource( 1 )

[node name="OmniLight" type="OmniLight" parent="CSGCombiner/CSGBox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01575, 0 )
light_bake_mode = 2
shadow_enabled = true
shadow_bias = 0.25
omni_range = 11.7622

[node name="CSGBox3" type="CSGBox" parent="CSGCombiner"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 17 )
use_collision = true
invert_faces = true
width = 10.1668
height = 8.6744
depth = 12.0219
material = SubResource( 1 )

[node name="OmniLight2" type="OmniLight" parent="CSGCombiner/CSGBox3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01575, 1 )
light_bake_mode = 2
shadow_enabled = true
shadow_bias = 0.25
omni_range = 11.7622

[node name="Eye1Pivot" type="Spatial" parent="CSGCombiner/CSGBox3"]
transform = Transform( -2.64526, 0, 8.74228e-08, 0, 2.64526, 0, -2.31256e-07, 0, -1, 0, -1.95791, 12 )

[node name="Model" type="MeshInstance" parent="CSGCombiner/CSGBox3/Eye1Pivot"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 1.42109e-14, 0, 1, 0, -0.28081, 6 )
mesh = SubResource( 5 )
skeleton = NodePath("../..")
script = SubResource( 6 )

[node name="CSGBox2" type="CSGBox" parent="CSGCombiner"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3.327, 8 )
use_collision = true
invert_faces = true
width = 1.4707
depth = 6.0
material = SubResource( 1 )

[node name="Trigger1" type="Area" parent="."]
transform = Transform( 2.99, 0, 0, 0, 3.99, 0, 0, 0, 1, 0, -3.327, 11 )
script = ExtResource( 4 )

[node name="Model" type="Spatial" parent="Trigger1"]

[node name="Mesh0" type="MeshInstance" parent="Trigger1/Model"]
mesh = SubResource( 3 )
skeleton = NodePath("../..")

[node name="CollisionShape" type="CollisionShape" parent="Trigger1"]
transform = Transform( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0, 0 )
shape = SubResource( 4 )

[connection signal="body_entered" from="Trigger1" to="Trigger1" method="_on_body_entered"]
